Fixed view controls vertical alignment in nav bar

--- a/src/modules/Header/components/LanguageControls/LanguageControls.module.scss
+++ b/src/modules/Header/components/LanguageControls/LanguageControls.module.scss
@@ -4,6 +4,11 @@
   align-items: center;
   width: 70px;
 
+  >a {
+    display: flex;
+    align-items: center;
+  }
+
   >div {
     display: flex;
     align-items: center;
